--- a/projects/templates/projects/training.html
+++ b/projects/templates/projects/training.html
@@ -9,7 +9,7 @@
             <h3>Resources</h3>
             <hr>
             <ul>
-                <li><a href="{% url 'training' %}">Return to Feed</a></li>
+                <li><a href="{% url 'home' %}">Return to Feed</a></li>
                 <li><a href="{% url 'projects' %}">View Projects</a></li>
                 <li><a href="{% url 'active_conversations' %}">Send a Message</a></li>
                 <li><a href="{% url 'training' %}">Start Competing</a></li>
