--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -30,7 +30,7 @@
         <h3>Resources</h3>
         <hr>
         <ul>
-            <li><a href="{% url 'training' %}">Return to Feed</a></li>
+            <li><a href="{% url 'home' %}">Return to Feed</a></li>
 
             <li><a href="{% url 'training' %}">Explore Training</a></li>
             <li><a href="{% url 'active_conversations' %}">Send a Message</a></li>
