--- a/projects/templates/projects/feeds.html
+++ b/projects/templates/projects/feeds.html
@@ -58,10 +58,10 @@
       <h3>Resources</h3>
       <hr>
       <ul>
-        <li><a href="{% url 'projects' %}">Projects</a></li>
-        <li><a href="{% url 'training' %}">Training</a></li>
-        <li><a href="{% url 'active_conversations' %}">Messaging</a></li>
-        <li><a href="{% url 'training' %}">Competitions</a></li>
+        <li><a href="{% url 'projects' %}">View Projects</a></li>
+        <li><a href="{% url 'training' %}">Explore Training</a></li>
+        <li><a href="{% url 'active_conversations' %}">Send a Messaging</a></li>
+        <li><a href="{% url 'training' %}">Start a Competing</a></li>
       </ul>
     </div>
   </aside>
