--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -1339,8 +1339,8 @@ textarea {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #333;
-    color: #f1f1f1;
+    background-color: #f1f1f1;
+    color: #000;
     margin-bottom: 15px;
 }
 
