--- a/projects/templates/projects/landing.html
+++ b/projects/templates/projects/landing.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="{% static 'projects/images/original-logo.png' %}" type="image/x-icon">
+
     <link rel="stylesheet" href="{% static 'projects/styles.css' %}">
     <style>
         /* Invisible header styles */
